# SmartECG

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: base.yaml  bilstm.yaml  cnn1d.yaml  itransformer.yaml  itransformer_500.yaml  itransformer_b2.yaml  itransformer_b3.yaml  itransformer_l.yaml  itransformer_s.yaml  lstm.yaml  transformer_t.yaml
exports/: itransformer_500_int8.onnx  itransformer_int8.tflite
notebooks/: 01_explore_ptbxl.ipynb  02_baseline_eda.ipynb  03_results.ipynb  kaggle_phase1.ipynb  kaggle_phase2.ipynb
runs/: deployment.json  deployment_500.json  sampling_rate.md  size_ablation.md
scripts/: benchmark_all.sh  deploy_best.py  eval_only.py  export_all.sh  gen_demographics.py  gen_interpretability.py  run_sweep.py  train_all.sh  train_remaining.sh  update_readme.py
smartecg/data/: dataset.py  download.py  labels.py  preprocessing.py  splits.py
smartecg/deployment/: benchmark.py  export_coreml.py  export_onnx.py  export_tflite.py  quantize.py
smartecg/interpretability/: attention.py  dashboard.py  shap_explain.py  temporal_attr.py
smartecg/models/: __init__.py  bilstm.py  cnn1d.py  heads.py  itransformer.py  lstm.py  transformer_t.py
smartecg/training/: loop.py  losses.py  metrics.py  train.py
smartecg/utils/: config.py  seed.py
tests/: test_export.py  test_labels.py  test_models.py  test_preprocessing.py  test_seed.py
