[project]
name = "smartecg"
version = "0.1.0"
description = "iTransformer for short-window cardiac event forecasting on 12-lead ECG"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2",
    "numpy>=1.24,<2",
    "scipy>=1.10",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "wfdb>=4.1",
    "scikit-learn>=1.3",
    "tqdm>=4.66",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "wandb>=0.16",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "shap>=0.44",
    "captum>=0.7",
    "streamlit>=1.30",
    "onnx>=1.15",
    "onnxruntime>=1.17",
]

[project.optional-dependencies]
deploy = [
    "coremltools>=7.1",
    "tensorflow>=2.15",
    "onnx-tf>=1.10",
]
dev = [
    "pytest>=7.4",
    "ruff>=0.1",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["smartecg*"]

[tool.ruff]
line-length = 100
target-version = "py310"
